# highscore-rs

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  highscore.sqlite  rest-api.http
.github/workflows/: docker-image.yml
migrations/2023-07-29-170058_highscore/: down.sql  up.sql
migrations/2023-09-11-211716_multi_tenant/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs  serde.rs
src/api/: highscore.rs  mod.rs
src/api/dto/: highscore.rs  mod.rs
src/api/model/: mod.rs
src/db/: mod.rs
src/model/: highscore.rs
src/old/controller/: highscore.rs
src/old/module/: mod.rs
src/old/module/highscore/: controller.rs  model.rs  service.rs
src/old/service/: mod.rs
src/service/: highscore.rs
