[package]
name = "highscore-rs"
version = "0.1.0"
authors = ["Johannes Hörmann <me@aligator.dev>"]
edition = "2021"
rust-version = "1.71.0"
repository = "https://github.com/aligator/highscore-rs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.0", features = ["sqlite", "time", "r2d2", "returning_clauses_for_sqlite_3_35"]}
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
schemars = { version = "0.8.13" }
serde = "1.0.181"
time = { version = "0.3.23", features = ["serde", "formatting", "macros"] }
log = { version = "0.4.19", features = ['std'] }
anyhow = "1.0"
